--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+dj-database-url==2.3.0
 Django==5.1.2
 django-debug-toolbar==4.4.6
 gunicorn==23.0.0
@@ -6,7 +7,6 @@ packaging==24.2
 psycopg2==2.9.10
 setuptools==75.1.0
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.2
 wheel==0.44.0
-
-
